assets/css/style.scss
/* ... */
#navbar > #breadcumb > .link {
	flex-shrink: 0;
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 16px;
	border-radius: 50%;
	height: var(--back-width);
	width: var(--back-width);
}

#navbar > .buttons > .button > .icon {
	pointer-events: none;
	display: inline-flex;
	justify-content: center;
	color: var(--pure);
	line-height: 1;
}

#navbar > #breadcumb > #title-container > .loading-title {
	position: absolute;
}

#navbar > #breadcumb > #title-container.loading > .real-title,
#navbar > #breadcumb > #title-container.loading > .loading-title {
	transform: translateY(-100%);
}

#navbar > #breadcumb > #title-container.loading > .real-title,
#navbar > #breadcumb > #title-container > .loading-title {
	opacity: 0;
}

#navbar > #breadcumb > #title-container > .real-title,
#navbar > #breadcumb > #title-container.loading > .loading-title {
	opacity: 1;
}

#navbar > #breadcumb > .link,
#navbar > #breadcumb > #title-container,
#navbar > #breadcumb > #title-container > * {
	transition:
		background-color 0.15s ease,
		filter 0.15s ease,
		outline 0s ease,
		transform 0.2s ease-in-out,
		opacity 0.2s ease;
}

#navbar > #breadcumb > .link,
#navbar > #breadcumb > #title-container > .real-title {
	transform: none;
}

@mixin breadcumb_link-hover($hover_or_active) {
	#navbar > #breadcumb > .link:#{$hover_or_active} {
		background: var(--button-bg-hover-inverted);
		filter: invert(1);
		outline-color: var(--button-bg-hover-inverted) !important;
	}
}

@media (hover: hover) {
	@include breadcumb_link-hover("hover");
}

@media (hover: none) {
	@include breadcumb_link-hover("active");
}

@media only screen and (min-width: 1024px) {
	#navbar {
		position: fixed;
		z-index: var(--header-z-index);
		height: var(--navbar-noshrink);
		width: 100%;
		left: 0;
		top: 0;
		display: flex;
		align-items: center;
		justify-content: space-between;
		padding: 0 50px 0 46px;
	}

	#navbar.shrinked {
		height: var(--navbar-shrinked);
	}

	#navbar > .buttons {
		display: inline-flex;
		flex-shrink: 0;
	}

	#navbar > .buttons > .button {
		margin-left: 10px;
	}

	#navbar > .buttons > .button .xda-icon {
		height: 1lh;
		width: 1lh;
	}

	#navbar > #breadcumb {
		display: inline-flex;
		min-width: 0;
		padding-left: 4px;
	}

	#navbar > #breadcumb > #title-container,
	#navbar > #breadcumb > .link {
		margin: 18px 0;
	}

	#navbar > #breadcumb > #title-container {
		//do not use padding for absolute positioned elements
		border: 10px solid transparent;
		border-top: none;
		border-bottom: none;
	}

	#navbar
		> #breadcumb
		> .link[data-insert-navigation="false"]
		~ #title-container,
	#navbar > #breadcumb > .link[data-insert-navigation="false"] {
		transform: translateX(calc(var(--back-width) * -1));
	}
}

@media only screen and (min-width: 2101px) {
	#navbar {
		width: 100%;
		padding: 0 20vw 0 calc(20vw - 4px);
	}
}

@media only screen and (max-width: 1023px) {
	#navbar > #breadcumb {
		height: var(--navbar-noshrink);
		top: 0;
		font-size: 20px;
	}

	#navbar > #breadcumb,
	#navbar > .buttons {
		position: fixed;
		z-index: var(--header-z-index);
		width: 100%;
		left: 0;
		display: flex;
		align-items: center;
	}

	#navbar > #breadcumb > .link[data-insert-navigation="false"] {
		transform: translateX(calc(-100% - 10px));
	}

	#navbar > #breadcumb > #title-container > .real-title,
	#navbar > #breadcumb > #title-container > .loading-title {
		text-align: center;
	}

	#navbar > #breadcumb > #title-container {
		margin: auto;
		padding: 0 20px;
		max-width: calc(100% - (var(--back-width) * 2));
	}

	#navbar > #breadcumb > #title-container > .loading-title {
		width: 100%;
		left: 0;
	}

	#navbar > #breadcumb > #title-container.loading > .loading-title {
		transform: translateY(-100%);
	}

	#navbar > .buttons {
		bottom: 0;
		justify-content: space-evenly;
		padding: 0 25px;
		padding-bottom: env(safe-area-inset-bottom, 0px) !important;
		background-color: var(--navbar-bg);
		backdrop-filter: blur(10px);
		-webkit-backdrop-filter: blur(10px);
		border-top: 1px solid var(--navbar-border);
	}

	#navbar > .buttons > .button {
		height: var(--nav-buttons-h);
		max-width: 150px;
		display: grid;
		flex-basis: 100%;
		border: 0;
		background: none;
		font-size: 20px;
		text-align: center;
	}

	#navbar > .buttons > .button > .icon {
		width: 70px;
		padding: 6px 0;
		height: 32px;
		border-radius: 1em;
		margin: auto;
	}

	#navbar > #breadcumb > .link {
		position: absolute;
		margin-left: 10px;
	}

	@mixin navbar_buttons-hover($hover_or_active) {
		#navbar > .buttons > .button:#{$hover_or_active} > *,
		#navbar > .buttons > .button:focus-visible > * {
			filter: none;
		}

		#navbar > .buttons > .button:#{$hover_or_active} > .icon,
		#navbar > .buttons > .button:focus-visible > .icon {
			background: var(--button-bg-hover-inverted);
			filter: invert(1);
		}
	}

	@media (hover: hover) {
		@include navbar_buttons-hover("hover");
	}

	@media (hover: none) {
		@include navbar_buttons-hover("active");
	}
}

@media only screen and (max-width: 500px) {
	#navbar > .buttons {
		padding: 0 5px;
	}

	#navbar > .buttons > .button {
		padding: 8px 3px;
	}
}

/********************************************************************************
**************************** PAGE SPECIFIC LAYOUTS ******************************
/********************************************************************************/

/******************************* Index Page Layout ******************************/
#index {
	display: flex;
	flex-direction: column;
	gap: 60px;
}

#index .blog-card {
	-webkit-user-select: none;
	user-select: none;
	border-radius: 2em;
	//harcoded cause it's the same for light/dark (it goes with v1/v2...)
	color: #fafafa;
}

#index .blog-card span {
	margin-top: 18px;
}

#index .blog-card.v1 {
	background-image: linear-gradient(
		43deg,
		#4158d0 0%,
		#c850c0 46%,
		#ffcc70 100%
	);
}

#index .blog-card.v2 {
	background-image: linear-gradient(
		43deg,
		#ff3cac 0%,
		#784ba0 50%,
		#2b86c5 100%
	);
}
/* ... */

